# governance

./: .gitignore  AGENTS.md  README.md  TASK.md  pyproject.toml
.github/: copilot-instructions.md
.github/governance/: supportability.yml
.github/workflows/: delivery-receipt.yml  (+10 more)
docs/: governance-canary-2026-06-29.md  governance-canary-2026-07-15.md  phase1-verification.md  self-enforcement-canary.md  supportability-github-enforcement.md
fixtures/: supportability-enforcement-legacy-request.yml  supportability-enforcement-receipt-activated.yml
governance_eval/: __init__.py  __main__.py  adopter_template.py  adoption.py  ai_review_failures.py  ai_review_gate.py  architecture_gate.py  architecture_policy.py  artifact_verifier.py  benchmark.py  bootstrap_audit.py  candidate_bundle.py  candidate_pipeline.py  capability_catalog.py  cases.py  checkout_receipt.py  cli.py  codex_connector_collector.py  codex_connector_evidence.py  codex_review_gate.py  copilot_review_evidence.py  decision.py  delivery_readiness.py  detectors.py  docker_gate_command.py  docker_process.py  docker_runtime.py  docker_toolchain.py  execution_plan.py  execution_plan_v2.py  execution_result.py  execution_result_v2.py  gate_command_policy.py  github_app_manifest.py  github_review_client.py  hashing.py  judge_evidence.py  legacy_copilot_gate.py  lock.py  merge_group_authority.py  (+30 more)
target_packs/: registry.json
targets/: spaghetti.lock.toml  spaghetti.toml
tests/: receipt_fixture.py  test_adopter_template.py  test_adoption.py  test_ai_review_evidence.py  test_ai_review_failure_evidence.py  test_ai_review_gate.py  test_architecture_gate.py  test_benchmark_and_cli.py  test_bootstrap_audit.py  test_candidate_pipeline.py  test_candidate_verifier.py  test_capability_adapters.py  test_capability_catalog.py  test_checkout_receipt.py  test_codex_connector_collector.py  test_codex_connector_evidence.py  test_codex_review_gate.py  test_delivery_readiness.py  test_detectors_and_decision.py  test_docker_process.py  test_docker_process_live.py  test_docker_runtime.py  test_docker_toolchain.py  test_execution_plan.py  test_execution_plan_v2.py  test_execution_result.py  test_execution_result_v2.py  test_github_app_manifest.py  test_github_review_client.py  test_historical_execution_schemas.py  test_judge_evidence.py  test_merge_group_authority.py  test_package_audit.py  test_registered_verification.py  test_ruff_docker_live.py  test_schemas_and_lock.py  test_scope_manifest.py  test_self_update_boundary.py  test_self_update_policy.py  test_source_boundary.py  (+16 more)
(+108 files in other folders)
