[project]
name = "governance-eval"
version = "0.1.0"
description = "Offline governance benchmark evaluator for AI-directed software development."
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
governance-eval = "governance_eval.cli:main"

[tool.setuptools.packages.find]
include = ["governance_eval*"]

[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"
